; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/nvi/cl/extr_cl_main.c_sig_end.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/nvi/cl/extr_cl_main.c_sig_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@SIGHUP = common dso_local global i32 0, align 4
@INDX_HUP = common dso_local global i64 0, align 8
@SIGINT = common dso_local global i32 0, align 4
@INDX_INT = common dso_local global i64 0, align 8
@SIGTERM = common dso_local global i32 0, align 4
@INDX_TERM = common dso_local global i64 0, align 8
@INDX_WINCH = common dso_local global i64 0, align 8
@SIGWINCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @sig_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sig_end(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.TYPE_3__* @GCLP(i32* %4)
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = load i32, i32* @SIGHUP, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i64, i64* @INDX_HUP, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = call i32 @sigaction(i32 %6, i32* null, i32* %11)
  %13 = load i32, i32* @SIGINT, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i64, i64* @INDX_INT, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  %19 = call i32 @sigaction(i32 %13, i32* null, i32* %18)
  %20 = load i32, i32* @SIGTERM, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i64, i64* @INDX_TERM, align 8
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  %26 = call i32 @sigaction(i32 %20, i32* null, i32* %25)
  ret void
}

declare dso_local %struct.TYPE_3__* @GCLP(i32*) #1

declare dso_local i32 @sigaction(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
